--- a/index.html
+++ b/index.html
@@ -6,98 +6,186 @@
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <script src=""></script>
+    <script src="https://kit.fontawesome.com/09ac3c9711.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="container">
-        <div class="sidebar">
+        <div class="navbar">
             <nav>
+                <img src="icon.png" id="icon">
                 <ul>
-                    <li><a href=".main"><img src="home.png" height="25px" width="25px">Home</a></li>
-                    <li><a href="#about"><img src="about.png" height="25px" width="25px">About</a></li>
-                    <li><a href="#skill"><img src="skills.png" height="25px" width="25px">Skills</a></li>
-                    <li><a href="#project"><img src="project.webp" height="25px" width="25px">Projects</a></li>
-                    <li><a href="#contact"><img src="contact.png" height="25px" width="25px">Contact</a></li>
+                    <li><a href=".main">Home<img src="home.png" height="25px" width="25px"></a></li>
+                    <li><a href="#about">About<img src="about.png" height="25px" width="25px"></a></li>
+                    <li><a href="#skill">Skills<img src="skills.png" height="25px" width="25px"></a></li>
+                    <li><a href="#project">Projects<img src="project.webp" height="25px" width="25px"></a></li>
+                    <li><a href="#contact">Contact<img src="contact.png" height="25px" width="25px"></a></li>
                 </ul>
             </nav>
         </div>
-        <div class="main">
-            <div class="content">
-                <div class="header">
-                    <h1 id="info">Hi! I am Aditi Sharma</h1>
-                    <p id="abt">Developer, Engineer.</p>
-                    <div class="btn"><a href="#contact"><button>Contact me</button></a></div>
+    </div>
+    <div class="main">
+        <div class="content">
+            <div class="header">
+                <h1 id="info">Hi! I am Aditi Sharma</h1>
+                <p id="info1">Developer, Engineer.</p>
+                <div class="btn"><a href="#contact"><button>Contact me</button></a></div>
+            </div>
+            <div class="image">
+                <img src="my_pic.png" alt="image">
+            </div>
+        </div>
+    </div>
+    <div class="box">
+        <div id="about">
+            <div class="row">
+                <div class="col1">
+                    <img src="my_img.jpg">
                 </div>
-                <div class="image">
-                    <img src="Working_in_Office.webp" alt="image">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="about">
-        <div class="head">
-            <h1>About</h1>
-        </div>
-        <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae deleniti suscipit aperiam
-            ab provident temporibus laboriosam eius excepturi similique ratione quis recusandae hic, eum consequatur
-            odit officiis error placeat tenetur ipsa possimus quas dolorem. Consequuntur corrupti ipsum laboriosam
-            blanditiis quas consequatur veritatis iure tenetur quae odio nisi alias, ut officia.</div>
-        <div class="btn"><a href="cv.txt"><button>Download CV</button></a></div>
-    </div>
-    </div>
-    <div id="skill">
-        <div class="head">
-            <h1>Skills</h1>
-        </div>
-        <div id="sk">
-            <dl>Python</dl>
-            <dd>Basic knowledge</dd>
-            <div class="skl">
-                <div class="sk1"></div>
-            </div>
-            <dl>Java</dl>
-            <dd>Basic knowledge</dd>
-            <div class="skl">
-                <div class="sk2"></div>
-            </div>
-            <dl>HTML</dl>
-            <dd>Intermediate</dd>
-            <div class="skl">
-                <div class="sk3"></div>
-            </div>
-            <dl>CSS</dl>
-            <dd>Intermediate</dd>
-            <div class="skl">
-                <div class="sk4"></div>
-            </div>
-        </div>
-    </div>
-    <div id="project">
-        <div class="head">
-            <h1>Projects</h1>
-        </div>
-        <li><a href=#>Hospital Website</a></li>
-    </div>
-    <div id="contact">
-        <h1 id="cnt">Get in Touch</h1>
-        <form>
-            <div class="form">
-                <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email">
-            </div>
-            <div class="form">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name">
-            </div>
-            <div class="form">
-                <label for="msg" class="form-label">Write your Message</label>
-                <textarea class="form-control" id="msg"></textarea>
-            </div>
-            <button type="submit" class="bttn">Submit</button>
-        </form>
-    </div>
+                <div class="col2">
+                    <h1 id="header">About Me</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae deleniti suscipit aperiam
+                        ab provident temporibus laboriosam eius excepturi similique ratione quis recusandae hic, eum
+                        consequatur
+                        odit officiis error placeat tenetur ipsa possimus quas dolorem. Consequuntur corrupti ipsum
+                        laboriosam
+                        blanditiis quas consequatur veritatis iure tenetur quae odio nisi alias, ut officia</p>
+                    <div class="btn"><a href="CV.pdf" download><button>Download CV</button></a></div>
 
+                    <div class="edu">
+                        <h3>Education</h3>
+                        <ul>
+                            <li><span>2021- Present</span><br>SOA University, Iter College<br>B.Tech, CSE</li><br>
+                            <li><span>2019-2021</span><br>DAV Public School<br>Senior Secondary Education</li><br>
+                            <li><span>2019</span><br>DAV Public School<br>Secondary Education</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="skill">
+            <h1 id="header">Skills</h1>
+            <div id="sk">
+                <dl>Python</dl>
+                <dd>Basic knowledge</dd>
+                <div class="skl">
+                    <div class="sk1"></div>
+                </div>
+                <dl>Java</dl>
+                <dd>Basic knowledge</dd>
+                <div class="skl">
+                    <div class="sk2"></div>
+                </div>
+                <dl>HTML</dl>
+                <dd>Intermediate</dd>
+                <div class="skl">
+                    <div class="sk3"></div>
+                </div>
+                <dl>CSS</dl>
+                <dd>Intermediate</dd>
+                <div class="skl">
+                    <div class="sk4"></div>
+                </div>
+            </div>
+        </div>
+        <div class="services">
+            <div class="container"></div>
+            <h1 id="header">Services</h1>
+            <div class="row1">
+                <div class="services_item">
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint porro animi aut accusantium nisi
+                        magnam
+                        hic
+                        maxime incidunt dolor, voluptate a iure ipsam quaerat iste voluptatem quasi nemo sapiente
+                        consequuntur.
+                    </p>
+                </div>
+                <div class="services_item">
+                    <i class="fa-solid fa-mobile-button"></i>
+                    <h2>App Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint porro animi aut accusantium nisi
+                        magnam
+                        hic
+                        maxime incidunt dolor, voluptate a iure ipsam quaerat iste voluptatem quasi nemo sapiente
+                        consequuntur.
+                    </p>
+                </div>
+                <div class="services_item">
+                    <i class="fa-solid fa-laptop"></i>
+                    <h2>UX/UI Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint porro animi aut accusantium nisi
+                        magnam
+                        hic
+                        maxime incidunt dolor, voluptate a iure ipsam quaerat iste voluptatem quasi nemo sapiente
+                        consequuntur.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div id="project">
+            <h1 id="header">Projects</h1>
+            <div class="proj_list">
+                <div class="proj">
+                    <img src="i1.jpg">
+                    <div class="layer">
+                        <h3>Hospital Website</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis fuga praesentium facilis
+                            odio voluptatum voluptatem ab nesciunt itaque repellendus sapiente ullam eius, qui beatae,
+                            reprehenderit amet error voluptate magnam esse!</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="proj">
+                    <img src="i2.jpg">
+                    <div class="layer">
+                        <h3>Social Media</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis fuga praesentium facilis
+                            odio voluptatum voluptatem ab nesciunt itaque repellendus sapiente ullam eius, qui beatae,
+                            reprehenderit amet error voluptate magnam esse!</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="proj">
+                    <img src="i3.jpg">
+                    <div class="layer">
+                        <h3>Music app</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis fuga praesentium facilis
+                            odio voluptatum voluptatem ab nesciunt itaque repellendus sapiente ullam eius, qui beatae,
+                            reprehenderit amet error voluptate magnam esse!</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="contact">
+            <h1 id="header">Get in Touch</h1>
+            <form>
+                <div class="form">
+                    <input type="email" class="form-control" id="email" placeholder="Your email..." required>
+                </div>
+                <div class="form">
+                    <input type="text" class="form-control" id="name" placeholder="Your name..." required>
+                </div>
+                <div class="form">
+                    <textarea class="form-control" id="msg" placeholder="Your message..." required></textarea>
+                </div>
+                <button type="submit" class="bttn">Submit</button>
+            </form>
+        </div>
+    </div>
+    <div class="connect">
+        <p><i class="fa-regular fa-paper-plane"></i>aditi.tsr@gmail.com</p>
+        <div class="con_icon">
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+        </div>
+        <div class="copyright">
+            <p>Copyright © Aditi.</p>
+        </div>
+    </div>
 </body>
 
 </html>
