--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
             <nav>
                 <img src="icon.png" id="icon">
                 <ul>
-                    <li><a href=".main">Home<img src="home.png" height="25px" width="25px"></a></li>
+                    <li><a href="#main">Home<img src="home.png" height="25px" width="25px"></a></li>
                     <li><a href="#about">About<img src="about.png" height="25px" width="25px"></a></li>
                     <li><a href="#skill">Skills<img src="skills.png" height="25px" width="25px"></a></li>
+                    <li><a href="#services">Services<img src="services.png" height="25px" width="25px"></a></li>
                     <li><a href="#project">Projects<img src="project.webp" height="25px" width="25px"></a></li>
                     <li><a href="#contact">Contact<img src="contact.png" height="25px" width="25px"></a></li>
                 </ul>
             </nav>
         </div>
     </div>
-    <div class="main">
+    <div id="main">
         <div class="content">
             <div class="header">
                 <h1 id="info">Hi! I am Aditi Sharma</h1>
@@ -88,7 +89,7 @@
                 </div>
             </div>
         </div>
-        <div class="services">
+        <div id="services">
             <div class="container"></div>
             <h1 id="header">Services</h1>
             <div class="row1">
